--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.4.4",
+    "axios": "^0.19.0",
+    "core-js": "^3.6.1",
     "element-ui": "^2.13.0",
     "i": "^0.3.6",
     "npm": "^6.13.4",
