--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.1",
     "element-ui": "^2.13.0",
     "i": "^0.3.6",
+    "moment": "^2.24.0",
     "npm": "^6.13.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
