--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "moment": "^2.24.0",
     "npm": "^6.13.4",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
