--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.6.1",
+    "echarts": "^4.7.0",
+    "element-china-area-data": "^4.1.2",
     "element-ui": "^2.13.0",
     "i": "^0.3.6",
     "moment": "^2.24.0",
     "npm": "^6.13.4",
+    "vee-validate": "^3.2.5",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
